# llvm-project

clang/include/clang/Driver/: Options.td
flang/include/flang/Frontend/: FrontendActions.h  TargetOptions.h
flang/include/flang/Optimizer/Transforms/: Passes.td
flang/include/flang/Tools/: CLOptions.inc
flang/lib/Frontend/: CMakeLists.txt  CompilerInvocation.cpp  FrontendActions.cpp
flang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
flang/lib/Optimizer/CodeGen/: CodeGen.cpp
flang/lib/Optimizer/Transforms/: SimplifyRegionLite.cpp
llvm/: CMakeLists.txt
llvm/include/llvm/IR/: Mangler.h
llvm/lib/ExecutionEngine/: CMakeLists.txt
llvm/lib/ExecutionEngine/Orc/: CMakeLists.txt  Layer.cpp  ObjectLayer.cpp
llvm/lib/ExecutionEngine/RuntimeDyld/: CMakeLists.txt  JITSymbol.cpp
llvm/lib/MC/MCParser/: CMakeLists.txt
llvm/lib/Object/: Binary.cpp  CMakeLists.txt  COFFImportFile.cpp  MachOUniversal.cpp  OffloadBinary.cpp  SymbolicFile.cpp
llvm/lib/Support/: ThreadPool.cpp
llvm/lib/Transforms/Utils/: LoopUnroll.cpp
mlir/: CMakeLists.txt
mlir/core/: CMakeLists.txt
mlir/core/Dialect/: CMakeLists.txt
mlir/core/include/mlir/Dialect/: CMakeLists.txt
mlir/dialects/: CMakeLists.txt
mlir/dialects/Arithmetic/: CMakeLists.txt
mlir/dialects/ArmNeon/: CMakeLists.txt
mlir/dialects/Complex/: CMakeLists.txt
mlir/dialects/DLTI/: CMakeLists.txt
mlir/dialects/GPU/: CMakeLists.txt
mlir/dialects/LLVMIR/: CMakeLists.txt
mlir/dialects/Linalg/: CMakeLists.txt
mlir/dialects/MemRef/: CMakeLists.txt
mlir/dialects/OpenACC/: CMakeLists.txt
mlir/dialects/OpenMP/: CMakeLists.txt
mlir/dialects/Quant/: CMakeLists.txt
mlir/dialects/SCF/: CMakeLists.txt
mlir/dialects/SPIRV/: CMakeLists.txt
mlir/dialects/StandardOps/: CMakeLists.txt
mlir/dialects/Tosa/: CMakeLists.txt
mlir/dialects/Vector/: CMakeLists.txt
mlir/docs/: BytecodeFormat.md  Canonicalization.md
mlir/include/mlir/Bytecode/: BytecodeOpInterface.h  BytecodeOpInterface.td  BytecodeReader.h
mlir/include/mlir/Debug/: BreakpointManager.h  Counter.h  ExecutionContext.h  GdbDebugExecutionContextHook.h
mlir/include/mlir/Debug/BreakpointManagers/: FileLineColLocBreakpointManager.h  TagBreakpointManager.h
mlir/include/mlir/Debug/Observers/: ActionLogging.h
mlir/include/mlir/Dialect/X86Vector/: X86Vector.td
mlir/include/mlir/IR/: Action.h  ExtensibleDialect.h  MLIRContext.h  OpBase.td  OpDefinition.h  OperationSupport.h  Unit.h  Value.h
mlir/include/mlir/Rewrite/: PatternApplicator.h
mlir/include/mlir/Support/: DebugAction.h  DebugCounter.h
mlir/include/mlir/Tools/mlir-opt/: MlirOptMain.h
mlir/include/mlir/Transforms/: Passes.td
mlir/lib/Bytecode/: BytecodeOpInterface.cpp  Encoding.h
mlir/lib/Bytecode/Reader/: BytecodeReader.cpp
mlir/lib/Bytecode/Writer/: BytecodeWriter.cpp  IRNumbering.cpp
mlir/lib/Debug/: CMakeLists.txt  DebugCounter.cpp  ExecutionContext.cpp  GdbDebugExecutionContextHook.cpp
mlir/lib/Debug/BreakpointManagers/: FileLineColLocBreakpointManager.cpp
mlir/lib/Debug/Observers/: ActionLogging.cpp
mlir/lib/Dialect/Vector/IR/: VectorOps.cpp
mlir/lib/IR/: AsmPrinter.cpp  ExtensibleDialect.cpp  MLIRContext.cpp  Unit.cpp  Value.cpp
mlir/lib/Pass/: Pass.cpp  PassDetail.h
mlir/lib/Rewrite/: PatternApplicator.cpp
mlir/lib/Support/: DebugCounter.cpp
mlir/lib/Tools/mlir-opt/: MlirOptMain.cpp
mlir/lib/Transforms/: Canonicalizer.cpp  LocationSnapshot.cpp
mlir/lib/Transforms/Utils/: DialectConversion.cpp  GreedyPatternRewriteDriver.cpp
mlir/python/: CMakeLists.txt
mlir/test/Conversion/GPUToROCDL/: gpu-to-rocdl.mlir
mlir/test/Pass/: action-logging-filter.mlir  action-logging.mlir  run-reproducer.mlir
mlir/test/Transforms/: conservative-canonicalize.mlir
mlir/test/lib/IR/: TestLazyLoading.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-tblgen/: OpDefinitionsGen.cpp  OpFormatGen.cpp
mlir/tools/serialized-code-sample/: BinLoader.cpp  CMakeLists.txt
mlir/unittests/: CMakeLists.txt
mlir/unittests/Benchmarks/: Analysis.cpp  Attributes.cpp  CMakeLists.txt  Cloning.cpp  ConstantFolding.cpp  CreateOps.cpp  DialectConversion.cpp  GreedyRewriter.cpp  Interfaces.cpp  LoopUnrolling.cpp  ParserPrinter.cpp  TestBenchDialect.cpp  TestBenchDialect.h  TestBenchDialect.td  TestBenchInterface.td  Walk.cpp  plot.py
mlir/unittests/Debug/: DebugCounterTest.cpp  ExecutionContextTest.cpp  FileLineColLocBreakpointManagerTest.cpp
mlir/unittests/IR/: ActionTest.cpp
mlir/unittests/Support/: DebugActionTest.cpp  DebugCounterTest.cpp
mlir/utils/lldb-scripts/: action_debugging.py
(+6 files in other folders)
